--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-flash": "0.0.2",
     "express-partials": "^0.3.0",
+    "express-session": "^1.13.0",
     "morgan": "~1.6.1",
     "pg": "^4.5.5",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.22.0",
     "serve-favicon": "~2.3.0"
   },
-  "devDependencies":{
+  "devDependencies": {
     "sqlite3": "^3.1.3"
   }
 }
