--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-flash": "0.0.2",
     "express-partials": "^0.3.0",
     "express-session": "^1.13.0",
+    "method-override": "^2.3.5",
     "morgan": "~1.6.1",
     "pg": "^4.5.5",
     "pg-hstore": "^2.3.2",
