--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "migrate_local":"sequelize db:migrate --url sqlite://%cd%/quiz.sqlite",
+    "seed_local":"sequelize db:seed:all --url sqlite://%cd%/quiz.sqlite",
+    "migrate_heroku":"heroku run ./node_modules/.bin/sequelize db:migrate --url \\$DATABASE_URL",
+    "seed_heroku":"heroku run ./node_modules/.bin/sequelize db:seed:all --url \\$DATABASE_URL",
+    "reset_heroku":"heroku pg:resest DATEBASE"
   },
   "engines": {
     "node": "4.2.x",
@@ -23,6 +28,7 @@
     "pg": "^4.5.5",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.22.0",
+    "sequelize-cli": "^2.3.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
